--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ source:
 build:
   noarch: generic
   merge_build_host: True  # [win]
-  number: 1002
+  number: 1003
 
   rpaths:
     - lib/R/lib/
@@ -45,8 +45,9 @@ about:
   summary: Build friendly R packages that praise their users if they have done something good,
     or they just need it to feel better.
   license_family: MIT
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\MIT'  # [win]
+  license_file: 
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
+    - LICENSE
 
 extra:
   recipe-maintainers:
