--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '1.0.0' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,17 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: praise_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/praise_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/praise/praise_{{ version }}.tar.gz
   sha256: 5c035e74fd05dfa59b03afe0d5f4c53fbf34144e175e90c53d09c6baedf5debd
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1004
-
+  number: 1005
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -26,16 +23,14 @@ build:
 requirements:
   build:
     - {{ posix }}zip               # [win]
-
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
   host:
     - r-base
-
   run:
     - r-base
 
 test:
   commands:
-    # You can put additional test commands to be run here.
     - $R -e "library('praise')"           # [not win]
     - "\"%R%\" -e \"library('praise')\""  # [win]
 
@@ -45,18 +40,29 @@ about:
   summary: Build friendly R packages that praise their users if they have done something good,
     or they just need it to feel better.
   license_family: MIT
-  license_file: 
+  license_file:
     - '{{ environ["PREFIX"] }}/lib/R/share/licenses/MIT'
     - LICENSE
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
     - croth1
     - ocefpaf
-    - dbast
+
+# Package: praise
+# Title: Praise Users
+# Version: 1.0.0
+# Author: Gabor Csardi, Sindre Sorhus
+# Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
+# Description: Build friendly R packages that praise their users if they have done something good, or they just need it to feel better.
+# License: MIT + file LICENSE
+# LazyData: true
+# URL: https://github.com/gaborcsardi/praise
+# BugReports: https://github.com/gaborcsardi/praise/issues
+# Suggests: testthat
+# Collate: 'adjective.R' 'adverb.R' 'exclamation.R' 'verb.R' 'rpackage.R' 'package.R'
+# NeedsCompilation: no
+# Packaged: 2015-08-11 02:01:43 UTC; gaborcsardi
+# Repository: CRAN
+# Date/Publication: 2015-08-11 08:22:28
