--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @bgruening @cbrueffer @conda-forge/r @croth1 @daler @dbast @jdblischak @johanneskoester @ocefpaf
+* @conda-forge/r @croth1 @ocefpaf
